Quick fixes and added some short sentences for corrplot

--- a/Census-Income-Prediction-Final.ipynb
+++ b/Census-Income-Prediction-Final.ipynb
@@ -1456,7 +1456,9 @@
    "id": "a511a58b",
    "metadata": {},
    "source": [
-    "We have plotted a correlation plot on numeric values, where nothing too alarming that sugget there is some multicollinearity here. Though our model presented evidence that each predictor was necessary we wanted to make sure that there was no multicollinearity. Realistically variables liked **hours worked per work vs occupational score, age vs marriage, and age vs hours worked per week** should show some correlation. "
+    "We have plotted a correlation plot on numeric values, where nothing too alarming that sugget there is some multicollinearity here. Notice in both plots with respect to INCWAGE that UHRSWORK is approximately $0.50$, OCCSCORE is approximately $0.48$. There is noticeable negative correlations but nothing that is alarming. \n",
+    "\n",
+    "Though our model presented evidence that each predictor was necessary we wanted to make sure that there was no multicollinearity. However, we would assume that variables like **hours worked per work vs occupational score, age vs marriage, and age vs hours worked per week** would show some correlation."
    ]
   },
   {
