--- a/Census-Income-Prediction-Final.ipynb
+++ b/Census-Income-Prediction-Final.ipynb
@@ -2179,7 +2179,7 @@
    "id": "8bba04ca",
    "metadata": {},
    "source": [
-    "Minnesota's and Colorado's prediction plots have a similar resemblance with many points around the middle of the linear plot. The plots display our prediction vs the actual income value. It can be seen that our linear model crosses through a collection of points therefore calculating most of the values correctly. What makes the dataset difficult is the amount of data there is and the difficulty in analyzing human behavior. Creating a linear model in the sociosciences can be complicated due to the amount of convulated data there is. Assumptions are a huge role in sociosciences because statistically we must be aware of our limitations of our data and understanding the right assumption to be conditioned on. Socially, we cant assume some one's income based on race and occupation. The extent to where assumption are falsifiable is when you are conditioning on variables that are affected by race, family size, and occupation. Our linear model could not pick-up on every association or correlation, however, we are confident that this prediction plot has done a fair job. Also, there is a lot of underlying and missing data which makes our analysis incomplete.\n",
+    "Minnesota's and Colorado's prediction plots have a similar resemblance with many points around the middle of the linear plot. The plots display our prediction vs the actual income value. It can be seen that our linear model crosses through a collection of points therefore calculating most of the values correctly. What makes the dataset difficult is the amount of data there is and the difficulty in analyzing human behavior. Creating a linear model in the sociosciences can be complicated due to the amount of convulated data there is. Assumptions are a huge role in social sciences because statistically we must be aware of our limitations of our data and understanding the right assumption to be conditioned on. Socially, we cant assume some one's income based on race and occupation. The extent to where assumption are falsifiable is when you are conditioning on variables that are affected by race, family size, and occupation. Our linear model could not pick-up on every association or correlation, however, we are confident that this prediction plot has done a fair job. Also, there is a lot of underlying and missing data which makes our analysis incomplete.\n",
     "\n",
     "Continuing on our analysis of the plot, we can see that both plots have a large amount of outlier points near  500,000 , however, it is not enough to skew our linear model. The reason for this could be that there is so much data between the values of  0  to  300,000  that the amount of outliers is miniscule to the amount of data there is in the center."
    ]
@@ -2197,7 +2197,7 @@
    "id": "aa099aa7",
    "metadata": {},
    "source": [
-    "In this study, we wanted to be able to predict an individual's income by applying the statistical techniques and tools that we have learned from this course. Based on our analysis and results our predictions didn't turn out as we have hoped. However, assuming that the model is correct, we found that **sex, age, married, education, hours worked per week, and occupation score** was significant in both states. This was interesting to see since we assumed that race and the class of workers would be significant before we performed regression. However, we stated earlier that this could be due to the fact of underlying and missing data may have impacted our prediction model at the end. Additionally, there were many similarities between the two states as we were performing our analysis since we believed that there would be minor differences in predictors that would affect one's income. This is because there are minor differences in an individual's income, where the median income reported for Minnesota is $\\$38,881$ compared to Colorado's at $\\$39,545$ [2].\n",
+    "In this study, we wanted to be able to predict an individual's income by applying the statistical techniques and tools that we have learned from this course. Based on our analysis and results our predictions didn't turn out as we have hoped. However, assuming that the model is correct, we found that **sex, age, married, education, hours worked per week, and occupation score** was significant in both states. This was interesting to see since we assumed that race and the class of workers would be significant before we performed regression. However, we stated earlier that this could be due to the fact of underlying and missing data may have impacted our prediction model at the end. Additionally, there were many similarities between the two states as we were performing our analysis since we believed that there would be minor differences in predictors that would affect one's income. This is because there are minor differences in an individual's income, where the median income reported for Minnesota is $\\$38,881$ compared to Colorado's, $\\$39,545$ [2].\n",
     "\n",
     "Overall, we learned that working with data in the social sciences can be difficult to work with and that a robust statistical technique may need to be done in order to make our study more in-depth and accurate. Another issue that we ran into is our dataset was very large, when running through our code, it took some time to compile. Although the results were not what we have anticipated, this project allowed us to dive deeper into building predictive models and apply these techniques and tools to real-world datasets.\n",
     "\n",
@@ -2221,125 +2221,6 @@
     "\n",
     "[2] U.S Census Bureau. \"QuickFacts.\" Retrieved from https://www.census.gov/quickfacts/."
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "9cae0a9e",
-   "metadata": {},
-   "source": [
-    "# Logistic Regression"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "7dd65f66",
-   "metadata": {},
-   "source": [
-    "After noticing that our predictions didn't turn out as we have hoped, for this section, we wanted to test to see if we could apply logistic regression to this problem. Here, we will have to amend our response to be binary in order to run logistic regression. To do this, we created a new variable called **INCTHRES**, which will be the threshold we set our income to be, where our response is either 0 or 1. In 2018, the US Census Bureau reported the individual median income to be $\\$34,475$, thus, we will predict if the income is greater than $ \\$35,000$ where 0 is less than the threshold and 1 is greater than the threshold."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "id": "ac6037c7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mn$EDUC = as_factor(mn$EDUC)\n",
-    "mn$DIFFSENS = as_factor(mn$DIFFSENS)\n",
-    "mn$SEX = as_factor(mn$SEX)\n",
-    "mn$RACE = as_factor(mn$RACE)\n",
-    "\n",
-    "co$EDUC = as_factor(co$EDUC)\n",
-    "co$CLASSWKR = as_factor(co$CLASSWKR)\n",
-    "co$DIFFSENS = as_factor(co$DIFFSENS)\n",
-    "co$SEX = as_factor(co$SEX)\n",
-    "co$RACE = as_factor(co$RACE)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "id": "870f8890",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mn$INCTHRES = NA\n",
-    "mn$INCTHRES[mn$INCWAGE < 35000] =  0\n",
-    "mn$INCTHRES[mn$INCWAGE > 35000] =  1\n",
-    "\n",
-    "co$INCTHRESH = NA\n",
-    "co$INCTHRESH[co$INCWAGE < 35000] =  0\n",
-    "co$INCTHRESH[co$INCWAGE > 35000] =  1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "id": "acad8aba",
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\n",
-       "Call:\n",
-       "glm(formula = INCTHRES ~ SEX + AGE + MARRNO + EDUC + UHRSWORK + \n",
-       "    OCCSCORE, family = binomial, data = mn)\n",
-       "\n",
-       "Deviance Residuals: \n",
-       "    Min       1Q   Median       3Q      Max  \n",
-       "-3.9437  -0.5479  -0.1212   0.6846   3.0608  \n",
-       "\n",
-       "Coefficients:\n",
-       "                          Estimate Std. Error  z value Pr(>|z|)    \n",
-       "(Intercept)             -5.3706686  0.0352664 -152.289   <2e-16 ***\n",
-       "SEXMale                  0.1552581  0.0126474   12.276   <2e-16 ***\n",
-       "AGE                      0.0012306  0.0004871    2.526   0.0115 *  \n",
-       "MARRNO                   0.4010900  0.0106814   37.550   <2e-16 ***\n",
-       "EDUCHigh School or Less -0.8450676  0.0131751  -64.141   <2e-16 ***\n",
-       "UHRSWORK                 0.0883699  0.0005489  160.989   <2e-16 ***\n",
-       "OCCSCORE                 0.0611696  0.0006614   92.490   <2e-16 ***\n",
-       "---\n",
-       "Signif. codes:  0 ‘***’ 0.001 ‘**’ 0.01 ‘*’ 0.05 ‘.’ 0.1 ‘ ’ 1\n",
-       "\n",
-       "(Dispersion parameter for binomial family taken to be 1)\n",
-       "\n",
-       "    Null deviance: 277312  on 214354  degrees of freedom\n",
-       "Residual deviance: 162558  on 214348  degrees of freedom\n",
-       "  (667 observations deleted due to missingness)\n",
-       "AIC: 162572\n",
-       "\n",
-       "Number of Fisher Scoring iterations: 6\n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "glm_mn = glm(INCTHRES ~ SEX + AGE + MARRNO + EDUC + UHRSWORK + OCCSCORE, data = mn, \n",
-    "             family = binomial)\n",
-    "summary(glm_mn)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e0b0be17",
-   "metadata": {},
-   "source": [
-    "Earlier, we use the AIC to select the \"best\" model in terms of RSS. Here, we will be using the same predictors to run the logistic regression. Here, in the summary, we can interpret these coefficient estimates to be similar to linear regression but here these are in terms of log odds. Notice that the all of the p-value associated with SexMale, AGE, MARRNO, EDUCHigh School or Less, UHRSWORK, and OCCSCORE is less than $\\alpha = 0.05$. This suggests that these predictors are significant at the population level."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d3ead973",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
