--- a/Census-Income-Prediction-Final.ipynb
+++ b/Census-Income-Prediction-Final.ipynb
@@ -1176,7 +1176,7 @@
    "id": "164f89bd",
    "metadata": {},
    "source": [
-    "In hopes to fix these issues we applied the square-root, logorithm, and inverse transformations to fix the nonconstant varaince, linearity violation, and nonnormality. Below we show plots corresponding to each transformation and the change the transformation has done. "
+    "In hopes to fix these issues we applied the square-root, logorithm, and inverse transformations to fix the nonconstant variance, linearity violation, and nonnormality. Below we show plots corresponding to each transformation and the change the transformation has done. "
    ]
   },
   {
